update modal-win window

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<div id="modal-win">
-		<p>Congratulations! You won!</p>
+		<p>Congratulations!<br>You won!</p>
+		<p>Press any key to play again</p>
 	</div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
